2022-10-20T01:59:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286282382 # 538
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 108 152 / 111 156
* notice: next accum: outdated-unq outdated-all / unq all: 109 153 / 111 156
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-05] / []

2022-10-17T16:37:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266939945 # 531
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 107 151 / 111 156
* notice: next accum: outdated-unq outdated-all / unq all: 108 152 / 111 156
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-03] / []

2022-10-16T08:25:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258811341 # 527
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 106 150 / 111 156
* notice: next accum: outdated-unq outdated-all / unq all: 107 151 / 111 156
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-02] / []

2022-10-14T08:28:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248512024 # 521
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 105 149 / 111 156
* notice: next accum: outdated-unq outdated-all / unq all: 106 150 / 111 156
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-30] / []

2022-10-12T08:26:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233158407 # 515