@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-20T01:59:05Z",
+  "timestamp" : "2022-10-26T01:48:26Z",
   "count_outdated" : 153,
   "uniques_outdated" : 109,
-  "count" : 156,
-  "uniques" : 111,
+  "count" : 157,
+  "uniques" : 112,
   "clones" : [
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-10-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
