@@ -1,3 +1,11 @@
+2022-10-26T01:48:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3325586763 # 556
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 109 153 / 111 156
+* notice: next accum: outdated-unq outdated-all / unq all: 109 153 / 112 157
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-25]
+
 2022-10-20T01:59:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286282382 # 538
 * notice: last 14d: unq all: 2 3
